# luxis

./: .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  BEVINDINGEN-ANALYSE.md  BUGS-EN-VERBETERPUNTEN.md  CLAUDE.md  Caddyfile  DECISIONS.md  DOSSIER-WERKPLEK-RESEARCH.md  HANDOVER-NIEUWE-MACHINE.md  HANDOVER.md  LUXIS-ROADMAP.md  OPTIMIZATION-LOG.md  PRODUCT.md  QA-CHECKLIST.md  QA-SESSIE-21A-RESULTATEN.md  README.md  SESSIE-21-PROMPT.md  SESSIE-21B-PROMPT.md  SESSION-NOTES.md  UX-RESEARCH-D5-AGENDA.md  UX-RESEARCH-E2-TARIEVEN.md  UX-RESEARCH-E5-FACTURATIE.md  UX-RESEARCH-E6-DEBITEUREN.md  UX-VERBETERPLAN.md  WERKWIJZE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/scripts/: backfill_basenet_phase.py  backfill_draft_ready_notifications.py  backfill_extracted_text.py  backfill_freeze_date.py  backfill_incasso_first_step.py  backfill_terms_interest.py  import_historical_arrangements.py  kvk_backfill_legal_form.py  link_invoice_files.py  measure_closed_outstanding.py  revert_b2c_rente.py  rollout_av_rente.py  sanitize_step_templates.py
backend/templates/: 14_dagenbrief.html  renteberekening.html  sommatie.html
backend/tests/: COVERAGE.md  KNOWN_BUGS.md  conftest.py  test_advance_after_send_routes.py  test_ai_agent.py  test_ai_usage.py  test_arrangement_pipeline.py  test_arrangement_request_task.py  test_attachment_openable_guard.py  test_auth.py  test_auth_drift_guard.py  test_auth_lockout.py  test_auth_token_revocation.py  test_basenet_import.py  test_basenet_origin_status.py  test_basenet_phase_filter.py  test_basenet_s209_roundtrip.py  test_bik_staffel_sweep.py  test_billing_features.py  test_calendar.py  test_case_closed_notification.py  test_case_files_rename.py  test_cases.py  test_claims_crud.py  test_claims_overview.py  test_collections_router.py  test_compliance_14dagenbrief.py  test_compose_attachment_limits.py  test_compose_dagenbrief_gate.py  test_dashboard.py  (+94 more)
(+958 files in other folders)
